<resources>
    <string name="app_name">Assignmentthree</string>
    <string name="enter_mobile_number">Mobile Number(10 digits)</string>
    <string name="enter_password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_yourself">Dont have an account?Sign up now</string>
    <string name="email">Email Address</string>
    <string name="delivery">Delivery Address</string>
    <string name="passwordRegister">password(Min 4charecter)</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="introForgot">Enter your registerd Mobile Number and email below</string>
    <string name="next">Next</string>
    <string name="namemin3charecter">Name(Min 3charecter)</string>
    <string name="name_min3_charecter">Name min3 Charecter</string>
    <string name="welcome_to_foodrunner">WELCOME TO FOODRUNNER</string>
    <string name="preference_file_name">foodrunner</string>
    <string name="log_out">log_out</string>
    <string name="higher_order_functionality">Higher Order functionality</string>
    <string name="faqs">FAQs</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>