<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange"
    tools:context=".activity.RegisterActivity">
    <EditText
        android:id="@+id/etName"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="15dp"
        android:inputType="text"
        android:padding="6dp"
        android:hint="@string/name_min3_charecter"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/etName"
        android:background="@drawable/edit"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/etMobileNumberRegister"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/etEmail"
        android:background="@drawable/edit"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="15dp"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="6dp"
        android:hint="@string/enter_mobile_number"/>
    <EditText
        android:id="@+id/etDeliveryAddress"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/etMobileNumberRegister"
        android:background="@drawable/edit"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="15dp"
        android:inputType="text"
        android:lines="2"
        android:padding="6dp"
        android:hint="@string/delivery"/>
    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/etDeliveryAddress"
        android:background="@drawable/edit"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="15dp"
        android:inputType="textPassword"
        android:padding="6dp"
        android:hint="@string/passwordRegister"/>
    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/etPasswordRegister"
        android:background="@drawable/edit"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="15dp"
        android:inputType="textPassword"
        android:padding="6dp"
        android:hint="@string/confirmpassword"
        />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_below="@id/etPasswordConfirm"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/red"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="18sp"/>


</RelativeLayout>