<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange"
    tools:context=".activity.LoginActivity">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/foodlogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="15dp"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="6dp"
        android:hint="@string/enter_mobile_number"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_below="@id/etMobileNumber"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="15dp"
        android:inputType="textPassword"
        android:hint="@string/enter_password"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/red"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:padding="6dp"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="60dp"
        android:padding="6dp"
        android:text="@string/register_yourself"
        android:textColor="@color/white"
        android:textSize="18sp" />


</RelativeLayout>
