<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange"
    tools:context=".activity.ForgotPasswordActivity">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/foodlogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/introForgot"
        android:textColor="@color/white"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:padding="6dp"/>
    <EditText
        android:id="@+id/etFMobileNumber"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_below="@id/txtForgot"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit"
        android:drawablePadding="15dp"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="6dp"
        android:hint="@string/enter_mobile_number"/>
    <EditText
        android:id="@+id/etFEmail"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/etFMobileNumber"
        android:background="@drawable/edit"
        android:drawablePadding="15dp"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:hint="@string/email"/>
    <Button
        android:id="@+id/btnNext"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_below="@id/etFEmail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/red"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="18sp"/>

</RelativeLayout>